k8s/manifests/base/create-loan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: create-loan
    app.kubernetes.io/component: create-loan
    app.kubernetes.io/instance: create-loan
    app.kubernetes.io/name: create-loan
    app.kubernetes.io/part-of: create-loan-app
  name: create-loan
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: create-loan
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: create-loan
        deployment: create-loan
    spec:
      containers:
      - env:
        - name: SPRING_CONFIG_LOCATION
          value: "file:///app/application.yaml"
        image: quay.io/abryson/create-loan:0.0.1-SNAPSHOT_8518810
        imagePullPolicy: Always
        name: create-loan
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: 
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        volumeMounts:
        - name: create-loan
          mountPath: /app/application.yaml
          subPath: application.yaml
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
        - name: create-loan
          configMap:
            name: create-loan
      imagePullSecrets:
        - name: quayio
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
