k8s/manifests/base/loan-demo-model-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: loan-demo-model
    app.kubernetes.io/component: loan-demo-model
    app.kubernetes.io/instance: loan-demo-model
    app.kubernetes.io/name: loan-demo-model
    app.kubernetes.io/part-of: loan-demo-model-app
  name: loan-demo-model
  namespace: saga-loan-demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: loan-demo-model
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: loan-demo-model
        deployment: loan-demo-model
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: "dev"
        image: loan-demo-model
        imagePullPolicy: Always
        name: loan-demo-model
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: 
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      imagePullSecrets:
        - name: quayio
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
