k8s/manifests/base/lra-coordinator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lra-coordinator
    app.kubernetes.io/component: lra-coordinator
    app.kubernetes.io/instance: lra-coordinator
    app.kubernetes.io/name: lra-coordinator
    app.kubernetes.io/part-of: lra-coordinator-app
  name: lra-coordinator
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: lra-coordinator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lra-coordinator
        deployment: lra-coordinator
    spec:
      containers:
      - image: quay.io/abryson/lra-coordinator-quarkus-jvm:latest
        imagePullPolicy: Always
        name: lra-coordinator
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: 
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        volumeMounts:
        - mountPath: "/ObjectStore"
          name: lra-coordinator-data
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
      - name: lra-coordinator-data
        persistentVolumeClaim:
          claimName: lra-coordinator-data
      imagePullSecrets:
        - name: quayio
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
