k8s/manifests/base/lra-coordinator-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: lra-coordinator
    app.kubernetes.io/instance: lra-coordinator
    app.kubernetes.io/name: lra-coordinator
    app.openshift.io/runtime-version: latest
  name: lra-coordinator
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: lra-coordinator
    deployment: lra-coordinator
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
