k8s/manifests/base/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: saga-loan-demo
spec:
  tls:
    - hosts:
      - api-gateway.apps.cluster-gfd2c.gfd2c.sandbox425.opentlc.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for acme.com
      secretName: gateway-tls-cert
  rules:
  - host: api-gateway.apps.cluster-gfd2c.gfd2c.sandbox425.opentlc.com
    http:
      paths:
      - backend:
          service:
            name: api-gateway
            port:
              number: 8443
        path: /
        pathType: Prefix
