k8s/manifests/base/loan-demo-model-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan-demo-model
  namespace: saga-loan-demo
spec:
  rules:
  - host: loan-demo-model.apps.cluster-gfd2c.gfd2c.sandbox425.opentlc.com
    http:
      paths:
      - backend:
          service:
            name: loan-demo-model
            port:
              number: 8080
        path: /sagaloandemo/crud
        pathType: Prefix
